<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_spend" android:title="@string/action_spend"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_trasaction" android:title="@string/action_transaction"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_category" android:title="@string/action_category"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_export" android:title="@string/action_export"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
